--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "n8n-render",
   "version": "1.0.0",
-  "scripts": { "start": "n8n" },
-  "dependencies": { "n8n": "^1.111.0" },
-  "engines": { "node": "22.x" }
+  "scripts": {
+    "start": "n8n"
+  },
+  "dependencies": {
+    "n8n": "1.123.5"
+  },
+  "engines": {
+    "node": "22.x"
+  }
 }
